--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 Ted Talk/Ted Talk.xcodeproj/project.xcworkspace/xcuserdata
 Ted Talk/Ted Talk.xcodeproj/xcuserdata
 Ted Talk/Pods/
+Ted Talk/Ted Talk.xcworkspace/xcuserdata/
